8348961: [lworld] C2: Joining "Object:flat_in_array" with "Object:exact" does not properly work